had to change mipmap dieval image names since the names were not allowed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,7 +71,7 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/dieValue1"
+                    android:src="@mipmap/die_val_1"
                     android:id="@+id/die1"
                     android:background="@drawable/die1" />
 
@@ -83,7 +83,7 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/dieValue2"
+                    android:src="@mipmap/die_val_2"
                     android:id="@+id/die2"
                     android:background="@drawable/die2" />
 
