--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,18 +72,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/die1"
-                    android:background="@drawable/die1" />
+                    android:background="@drawable/die1"
+                    android:layout_weight="2"/>
 
                 <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1" />
+                    android:layout_width="78dp"
+                    android:layout_height="fill_parent" />
 
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/die2"
-                    android:background="@drawable/die2" />
+                    android:background="@drawable/die2"
+                    android:layout_weight="2"/>
 
             </LinearLayout>
 
