--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,10 +88,38 @@
 
             </LinearLayout>
 
-            <Space
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
-                android:layout_weight="1" />
+                android:layout_weight="1">
+
+                <Button
+                    android:text="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/pawn1"
+                    android:layout_weight="2"/>
+                <Button
+                    android:text="2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/pawn2"
+                    android:layout_weight="2"/>
+                <Button
+                    android:text="3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/pawn3"
+                    android:layout_weight="2"/>
+                <Button
+                    android:text="4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/pawn4"
+                    android:layout_weight="2"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
