--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,17 +11,10 @@
         android:layout_height="match_parent">
 
         <SurfaceView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
             android:id="@+id/surfaceView"
             android:layout_weight="1" />
-
-        <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/imageView"
-            android:layout_weight="1"
-            android:background="@drawable/parcheesiboard"/>
 
         <LinearLayout
             android:orientation="vertical"
