added end turn button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -189,6 +189,13 @@
                     android:id="@+id/makeMoveButton"
                     android:layout_weight="2"/>
 
+                <Button
+                    android:text="End Turn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="72dp"
+                    android:id="@+id/endTurnButton"
+                    android:layout_weight="2"/>
+
             </LinearLayout>
 
         </LinearLayout>
