--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,32 +32,22 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="1">
 
-                <Space
+                <TextView
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="2" />
+                    android:text="Player Turn: "
+                    android:id="@+id/playerTurnText"
+                    android:textSize="20dp"
+                    android:layout_weight="10"/>
 
                 <TextView
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:text="New Text"
-                    android:id="@+id/textView"
-                    android:layout_weight="1" />
+                    android:text="Current Substage: "
+                    android:id="@+id/currentSubstageText"
+                    android:textSize="20dp"
+                    android:layout_weight="10"/>
 
-                <Space
-                    android:layout_width="fill_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2" />
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="match_parent"
-                    android:text="New Text"
-                    android:id="@+id/textView1"
-                    android:layout_weight="1" />
-                <Space
-                    android:layout_width="fill_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2" />
             </LinearLayout>
 
             <LinearLayout
