--- a/app/src/main/res/menu/game_main.xml
+++ b/app/src/main/res/menu/game_main.xml
@@ -1,6 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_settings"
-        android:title="Settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"/>
+    <item android:id="@+id/menu_new_game"
+        android:title="New Game"
+        android:orderInCategory="100" />
+    <item android:id="@+id/menu_restart_game"
+        android:title="Restart Game"
+        android:orderInCategory="200" />
 </menu>
