--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2">
+            android:layout_weight="2"
+            android:background="@drawable/lightpurple">
 
             <Space
                 android:layout_width="match_parent"
