comments and got rid of end turn button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="@drawable/lightpurple">
+            android:background="@drawable/navyblue">
 
             <Space
                 android:layout_width="match_parent"
@@ -178,13 +178,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="72dp"
                     android:id="@+id/makeMoveButton"
-                    android:layout_weight="2"/>
-
-                <Button
-                    android:text="End Turn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="72dp"
-                    android:id="@+id/endTurnButton"
                     android:layout_weight="2"/>
 
             </LinearLayout>
